Revert "Merge changes from original repository"